Remame the spec file and add a tarball with samples

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: crystal
 crystal:
-    - latest
-    - nightly
+  - latest
+before_install:
+  - crystal tool format --check
+before_script:
+  - tar -xvf fixtures.tar.gz
