Add a shard to see the lib coverage

--- a/shard.yml
+++ b/shard.yml
@@ -15,5 +15,7 @@ development_dependencies:
   icr:
     github: crystal-community/icr
     branch: master
+  coverage:
+    github: anykeyh/crystal-coverage
 
 license: MIT
